# v207

./: .replit  DEPLOY_GUIDE.md  SECRETS_AND_ENV.md  app.py  deactivate_stale_properties.py  email_service.py  enrich_all_properties.py  enrich_city_geo.py  enrich_complexes_nominatim.py  enrich_t1_okruga.py  enrich_t2_mikrorayons.py  enrich_t3_classify.py  enrich_t4_pip.py  enrich_t5_routes.py  fix_db.py  models.py  pnpm-lock.yaml  push_service.py  pyproject.toml  replit.md  replit.nix  requirements.txt  routes.txt  run_bot.py  security_config.py  seed_blog_articles.py  seo_redirects.py  smart_search.py  sms_service.py  social_auth.py  telegram_gateway.py
attached_assets/: Pasted--79-email-auth-endpoint-JS-bundle-Sh-1781967512860_1781967512860.txt  Pasted--FetchFileThin-20-svg-200-fetch-sentry-js-2-2-FetchMess_1781975974283.txt  Pasted--https-krasnodar-trendagent-ru-object-garantiya-na-obry_1781973932716.txt  Pasted--p-6-16-24--1781984484085_1781984484086.txt
deployment/: DEPLOY.md
docs/: NOTIFICATION_SETUP.md  PRODUCTION_ASSESSMENT.md
repositories/: property_repository.py
routes/: admin.py  admin_api.py  api.py  applications.py  auth.py  blog.py  chat.py  city_pages.py  comparison.py  complexes.py  deals.py  developers.py  districts.py  favorites.py  glossary_data.py  jobs.py  legal.py  main.py  manager.py  manager_api.py  mortgage.py  partner.py  presentations.py  properties.py  public_api.py  pwa.py  searches.py  seo.py  seo_city.py  seo_zk.py  smart_search_api.py  streets.py
scripts/: .cian_debug.json  .enrich_cache_city10.json  .enrich_cache_city9.json  (+42 more)
(+315 files in other folders)
