[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "InBack - Real estate platform for Krasnodar region"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10.0",
    "beautifulsoup4>=4.12.0",
    "dadata>=25.0.0",
    "dateparser>=1.2.0",
    "email-validator>=2.2.0",
    "flask>=3.1.1",
    "flask-caching>=2.1.0",
    "flask-compress>=1.14.0",
    "flask-dance>=7.1.0",
    "flask-limiter>=3.5.0",
    "flask-login>=0.6.3",
    "flask-sqlalchemy>=3.1.1",
    "flask-talisman>=1.1.0",
    "flask-wtf>=1.2.0",
    "gunicorn>=23.0.0",
    "httpx>=0.25.0",
    "lxml>=6.0.0",
    "numpy>=2.0.0",
    "oauthlib>=3.3.1",
    "openai>=1.99.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pillow>=10.0.0",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.0.0",
    "pyjwt>=2.10.1",
    "python-telegram-bot[http2,socks]==20.7",
    "pytz>=2024.1",
    "pywebpush>=2.0.0",
    "qrcode>=8.0.0",
    "reportlab>=4.0.0",
    "requests>=2.32.4",
    "requests-oauthlib>=1.3.0",
    "rich>=13.0.0",
    "schedule>=1.2.0",
    "sendgrid>=6.12.4",
    "sqlalchemy>=2.0.42",
    "tqdm>=4.65.0",
    "weasyprint>=60.0",
    "werkzeug>=3.1.3",
    "telethon>=1.36.0",
]
